fix alignment gallery

--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ header {
 #GallaryTitle {
   text-align: center;
   font-size: 3em;
-  margin: 3% 0% 0% 2%;
+  margin: 2% 0% 2% 0%;
 }
 
 .valueTitle {
